--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li><a href="#statement">While Statement</a></li>
 				<li><a href="#function">Function Declaration</a></li>
 				<li><a href="#refer">Reference</a></li>
-				<li><a href="https://ankur-kumar-gupta.github.io/Quiz_Web_App/" target="_blank">Quiz</a></li>
+				<li><a href="https://ankur-kumar-gupta.github.io/Quiz_Web_App/" target="blank">Quiz</a></li>
 			</ul>
 		</div>
 		<div class="right-main">
